# janus

./: .gitignore  README.md  config.txt
src/core/: CMakeLists.txt
src/core/include/: Capture.h  Config.h  Fsm.h  HidBridge.h  ImageUtils.h  Inference.h  InputInjector.h  SharedMemory.h  SharedMemoryWriter.h
src/core/src/: Capture.cpp  Config.cpp  Fsm.cpp  HidBridge.cpp  Inference.cpp  InputInjector.cpp  main.cpp
src/driver/: Device.c  Device.h  Driver.c  Driver.h  Queue.c  Queue.h  README.md
src/overlay/: App.xaml  App.xaml.cs  CalibrationManager.cs  GestureOverlay.csproj  HandRenderer.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  SharedMemory.cs
src/prototype/: README.md  prototype.py  requirements.txt
